Archive2/5f/0ba385b647e535/output
main.cpp:6:1: error: 'sthread_local' does not name a type
 sthread_local unsigned int rage = 1;
 ^
main.cpp: In function 'void increase_rage(const string&)':
main.cpp:11:7: error: 'rage' was not declared in this scope
     ++rage;
       ^
main.cpp: In function 'int main()':
main.cpp:22:45: error: 'rage' was not declared in this scope
   std::cout << "Rage counter for main: " << rage << '\n';
                                             ^
